Created css file

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <head>
     <script src="app.js"></script>
+    
 </head>
 <html>
-    
+
 <body>
+    <div id='board'>
+        <table>
+            <td colspan="3"></td>
+            <td colspan="3"></td>
+            <td colspan="3"></td>
+        </table>
+    </div>
 </body>
 
 </html>
