--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
+
 <head>
     <script src="app.js"></script>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <html>
 
 <body>
-    <div id='board'>
-        <table>
-            <td colspan="3"></td>
-            <td colspan="3"></td>
-            <td colspan="3"></td>
-        </table>
-    </div>
+        <div id='gameboard'>
+            <table id="board">
+                <tr class='column'>
+                    <td id='1' class='row'>x</td>
+                    <td id='2' class='row'>x</td>
+                    <td id='3' class='row'>x</td>
+                </tr>
+                <tr class='column'>
+                    <td id='4' class='row'></td>
+                    <td id='5' class='row'></td>
+                    <td id='6' class='row'></td>
+                </tr>
+                <tr class='column'>
+                    <td id='7' class='row'></td>
+                    <td id='8' class='row'></td>
+                    <td id='9' class='row'></td>
+                </tr>
+
+            </table>
+        </div>
 </body>
 
 </html>
