--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -10,19 +10,19 @@
         <div id='gameboard'>
             <table id="board">
                 <tr class='column'>
-                    <td id='1' class='row'>x</td>
-                    <td id='2' class='row'>x</td>
-                    <td id='3' class='row'>x</td>
+                    <td id='1' class='cell'>x</td>
+                    <td id='2' class='cell'>x</td>
+                    <td id='3' class='cell'>x</td>
                 </tr>
                 <tr class='column'>
-                    <td id='4' class='row'></td>
-                    <td id='5' class='row'></td>
-                    <td id='6' class='row'></td>
+                    <td id='4' class='cell'></td>
+                    <td id='5' class='cell'></td>
+                    <td id='6' class='cell'></td>
                 </tr>
                 <tr class='column'>
-                    <td id='7' class='row'></td>
-                    <td id='8' class='row'></td>
-                    <td id='9' class='row'></td>
+                    <td id='7' class='cell'></td>
+                    <td id='8' class='cell'></td>
+                    <td id='9' class='cell'></td>
                 </tr>
 
             </table>
