Added click listener for board cells

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <head>
-    <script src="app.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <html>
@@ -10,9 +9,9 @@
         <div id='gameboard'>
             <table id="board">
                 <tr class='column'>
-                    <td id='1' class='cell'>x</td>
-                    <td id='2' class='cell'>x</td>
-                    <td id='3' class='cell'>x</td>
+                    <td id='1' class='cell'></td>
+                    <td id='2' class='cell'></td>
+                    <td id='3' class='cell'></td>
                 </tr>
                 <tr class='column'>
                     <td id='4' class='cell'></td>
@@ -27,6 +26,7 @@
 
             </table>
         </div>
+        <script src="app.js"></script>
 </body>
 
 </html>
