Added X and O toggle on board

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -7,7 +7,7 @@
 
 <body>
         <div id='gameboard'>
-            <table id="board">
+            <table>
                 <tr class='column'>
                     <td id='1' class='cell'></td>
                     <td id='2' class='cell'></td>
