Fixed win calc and added game terminator

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -6,6 +6,7 @@
 <html>
 
 <body>
+        <div id='message'></div>
         <div id='gameboard'>
             <table>
                 <tr class='column'>
@@ -23,8 +24,11 @@
                     <td id='8' class='cell'></td>
                     <td id='9' class='cell'></td>
                 </tr>
-
             </table>
+        </div>
+        
+        <div>
+            <button type=button id='refresh'>Restart</button>
         </div>
         <script src="app.js"></script>
 </body>
