--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
+<head>
+
+</head>
+
+<body>
+    <div>
+        <form>
+            <textarea cols='20' name='JSON' rows='10'></textarea>
+            <button>submit</button>
+        </form>
+    </div>
+</body>
+
+
+
+</html>
+
 
 
