Completed basic index format

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <head>
+    <style>
+    textarea {
+        width: 500px;;
+        height: 300px;
+    }
+    #submissionBox {
+        display: inline-block;
+        margin-top: 100px;
+    }
+    #container {
+        text-align: center;
+    }
+    </style>
+
 
 </head>
 
 <body>
-    <div>
-        <form>
-            <textarea cols='20' name='JSON' rows='10'></textarea>
+    <div id='container'>
+        <div id='submissionBox'>
+            <form id='fileSub'>
+                <textarea></textarea>
+            </form>
             <button>submit</button>
-        </form>
+        </div>
+
     </div>
 </body>
 
 
-
+<script>
+</script>
 </html>
 
 
