App.js posting data to server

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -20,10 +20,10 @@
 <body>
     <div id='container'>
         <div id='submissionBox'>
-            <form method="POST" action='upload_json'>
-                <textarea id='json_object'></textarea>
+            <form method="POST" action='upload'>
+                <textarea type='submit' name='Submit'></textarea>
 
-                <input type='submit' value='submit' class='submitButton'>
+                <input type='submit' value='Submit' class='submitButton'>
             </form>
             
         </div>
